Dump GC logs on OOM error